move country rules into parser (#3256)
* move country rules into parser

* consider review comments

* fix